fix spacing on list

--- a/styles/base.css
+++ b/styles/base.css
@@ -29,7 +29,7 @@ header {
     color: white;
 }
 
-.navigation:hover {
+.navigation a:hover {
     border: 1px solid white;
 }
 
@@ -97,8 +97,13 @@ h3{
 }
 
 .resources {
-    margin-top: 150px;
+    margin-top: 120px;
     font-size:large;
+}
+
+.links {
+    display: grid;
+    padding: 5px;
 }
 
 footer {
